--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   avatar_glow: ^2.0.2
   location: ^4.4.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
